--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -3,7 +3,7 @@
   "displayName": "Bruno",
   "publisher": "bruno-api-client",
   "description": "Bruno support for Visual Studio Code.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.74.0"
   },
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "https://github.com/usebruno/bruno-ide-extensions"
   },
-  "icon": "images/icon.png",
+  "icon": "icon.png",
   "contributes": {
     "languages": [{
       "id": "bruno",
