--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -27,17 +27,26 @@
         }
       ]
     },
-    "languages": [{
-      "id": "bruno",
-      "aliases": ["bruno", "bruno"],
-      "extensions": [".bru"],
-      "configuration": "./language-configuration.json"
-    }],
-    "grammars": [{
-      "language": "bruno",
-      "scopeName": "source.bru",
-      "path": "./syntaxes/bruno.tmLanguage.json"
-    }],
+    "languages": [
+      {
+        "id": "bruno",
+        "aliases": [
+          "bruno",
+          "bruno"
+        ],
+        "extensions": [
+          ".bru"
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "grammars": [
+      {
+        "language": "bruno",
+        "scopeName": "source.bru",
+        "path": "./syntaxes/bruno.tmLanguage.json"
+      }
+    ],
     "commands": [
       {
         "command": "bruno.sayHello",
@@ -45,8 +54,25 @@
       },
       {
         "command": "bruno.runRequest",
-        "title": "Run Request"
+        "title": "Bruno: Run Request"
       }
     ]
+  },
+  "dependencies": {
+    "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.8"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
+  },
+  "scripts": {
+    "build": "webpack"
   }
 }
