--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -59,16 +59,23 @@
     ]
   },
   "dependencies": {
+    "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.2",
+    "css-loader": "^6.7.3",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "postcss-loader": "^7.0.2",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
