--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -59,11 +59,13 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "autoprefixer": "^10.4.13",
     "classnames": "^2.3.2",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.8",
     "tailwindcss": "^2.2.19"
   },
