--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -60,9 +60,16 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@usebruno/js": "^0.2.0",
+    "@usebruno/lang": "^0.2.2",
     "autoprefixer": "^10.4.13",
+    "axios": "^1.3.4",
+    "chai": "^4.3.7",
     "classnames": "^2.3.2",
+    "form-data": "^4.0.0",
     "lodash": "^4.17.21",
+    "mustache": "^4.2.0",
+    "qs": "^6.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^8.0.5",
