feat: vscode ext - release 3.0.0 to marketplace

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -17,6 +17,12 @@
   },
   "icon": "icon.png",
   "main": "./src/extension.js",
+  "activationEvents": [
+    "onCommand:bruno.runRequest"
+  ],
+  "files.exclude": {
+    "**/node_modules": true
+  },
   "contributes": {
     "views": {
       "explorer": [
