feat(#10): Add same Textmate Bundle as VSCode-Extension

--- a/packages/intellij/src/main/resources/META-INF/plugin.xml
+++ b/packages/intellij/src/main/resources/META-INF/plugin.xml
@@ -26,10 +26,11 @@
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
     <depends>com.intellij.modules.platform</depends>
+    <depends>org.jetbrains.plugins.textmate</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-        <codeStyleSettingsProvider implementation="resources/bruno.tmLanguage.json"/>
+        <textmate.bundleProvider implementation="com.usebruno.plugin.textmate.BrunoTextMateBundleProvider"/>
     </extensions>
 </idea-plugin>
