feat: Add icon to bru files

--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -43,6 +43,10 @@
         "extensions": [
           ".bru"
         ],
+        "icon": {
+          "light": "icon.png",
+          "dark": "icon.png"
+        },
         "configuration": "./language-configuration.json"
       }
     ],
