feat: Settings page to configure path to bru cli

--- a/packages/intellij/src/main/resources/META-INF/plugin.xml
+++ b/packages/intellij/src/main/resources/META-INF/plugin.xml
@@ -30,6 +30,11 @@
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-        <codeStyleSettingsProvider implementation="resources/bruno.tmLanguage.json"/>
+        <applicationConfigurable
+                parentId="tools"
+                displayName="Bruno"
+                instance="com.usebruno.plugin.bruno.settings.BrunoSettingsConfigurable"
+                id="com.usebruno.plugin.bruno.settings.BrunoSettingsConfigurable"
+        />
     </extensions>
 </idea-plugin>
