feat(#13): Bruno Collection Run Configuration

--- a/packages/intellij/src/main/resources/META-INF/plugin.xml
+++ b/packages/intellij/src/main/resources/META-INF/plugin.xml
@@ -36,5 +36,7 @@
                 instance="com.usebruno.plugin.bruno.settings.BrunoSettingsConfigurable"
                 id="com.usebruno.plugin.bruno.settings.BrunoSettingsConfigurable"
         />
+
+        <configurationType implementation="com.usebruno.plugin.bruno.execution.BrunoRunConfigurationType"/>
     </extensions>
 </idea-plugin>
