feat(#13): Run Collection directly from bruno.json or collection.bru

--- a/packages/intellij/src/main/resources/META-INF/plugin.xml
+++ b/packages/intellij/src/main/resources/META-INF/plugin.xml
@@ -38,5 +38,6 @@
         />
 
         <configurationType implementation="com.usebruno.plugin.bruno.execution.BrunoRunConfigurationType"/>
+        <runConfigurationProducer implementation="com.usebruno.plugin.bruno.execution.BrunoRunConfigurationProducer"/>
     </extensions>
 </idea-plugin>
